--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
         class="left"
         alt="shield"
       />
-      <a href="http://elevenfity.org/" class="left">ELEVEN FIFTY ACADEMY</a>
-      <a href="http://elevenfity.org/courses">COURSES</a>
-      <a href="http://elevenfity.org/admissions">ADMISSIONS</a>
-      <a href="http://elevenfity.org/veterans">VETERANS</a>
-      <a href="http://elevenfity.org/about">ABOUT</a>
-      <a href="http://elevenfity.org/partners">EMPLOYERS</a>
+      <a href="http://elevenfifty.org/" target="blank" class="left">ELEVEN FIFTY ACADEMY</a>
+      <a href="http://elevenfifty.org/courses" target="blank">COURSES</a>
+      <a href="http://elevenfifty.org/admissions" target="blank">ADMISSIONS</a>
+      <a href="http://elevenfifty.org/veterans" target="blank">VETERANS</a>
+      <a href="http://elevenfifty.org/about" target="blank">ABOUT</a>
+      <a href="http://elevenfifty.org/partners" target="blank">EMPLOYERS</a>
       <a
         href="https://elevenfifty.org/admissions/schedule-a-meeting/"
-        class="schedule"
+        class="schedule" target="blank"
         >SCHEDULE A MEETING</a
       >
-      <a href="https://elevenfifty.org/admissions/apply-now/" class="applynow"
+      <a href="https://elevenfifty.org/admissions/apply-now/" class="applynow" target="blank"
         >APPLY NOW</a
       >
     </div>
     <div class="center">
     <div class="center_top">TRY CODING FOR FREE</div>
-    <div class="center_bottom"><a href="https://elevenfifty.org/courses/free-html-css-for-beginners/">SIGN UP ></a></div>
+    <div class="center_bottom"><a href="https://elevenfifty.org/courses/free-html-css-for-beginners/" target="blank">SIGN UP ></a></div>
 
 </div>
     </div>
@@ -54,7 +54,7 @@
             Want to discover if you'd enjoy a career in coding or cybersecurity?
             Try one of our FREE intro courses from home.
           </p>
-          <p><button>SIGN UP NOW ></button></p>
+          <p><button class="button"><a href="https://elevenfifty.org/courses/free-intro-to-coding/" target="blank">SIGN UP NOW ></a></button></p>
         </div>
       </div>
       <div class="column">
@@ -64,7 +64,7 @@
             Learn today's most relevant software development or cybersecurity
             skills to kick off a new career in the tech industry.
           </p>
-          <p><button>FULL-TIME COURSES ></button></p>
+          <p><button class="button"><a href="https://elevenfifty.org/courses/full-time-immersive/" target="blank">FULL-TIME COURSES ></a></button></p>
         </div>
       </div>
       <div class="column">
@@ -75,7 +75,7 @@
             work while attending lass virtually and on-site. Make money and
             change careers at the same time.
           </p>
-          <p><button>PART TIME COURSES ></button></p>
+          <p><button class="button"><a href="https://elevenfifty.org/courses/part-time/" target="blank">PART TIME COURSES ></a></button></p>
         </div>
       </div>
 </div>
